
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        
        
        
		<item 
        android:id="@+id/actors"
        
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/actors"/>
	
	   <item 
        android:id="@+id/movies"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/movies"/>

	   <item 
        android:id="@+id/new_item"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/new_item"/>
       
       <item 
        android:id="@+id/search_item"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/search_item"/>
	   	   
	   <item 
        android:id="@+id/delete_item"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/delete_item"/>
	   <item
        android:id="@+id/action_help"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    </menu>
